@@ -204,6 +204,10 @@ class OrgMgr extends SGL_Manager
     {
         SGL::logMessage(null, PEAR_LOG_DEBUG);
 
+        if (!SGL::objectHasState($input->org)) {
+            SGL::raiseError('No data in input object', SGL_ERROR_NODATA);
+            return false;
+        }
         //  handle org hierarchy
         $nestedSet = new SGL_NestedSet($this->_params);
 
