@@ -113,6 +113,10 @@ class OrgTypeMgr extends SGL_Manager
     {
         SGL::logMessage(null, PEAR_LOG_DEBUG);
 
+        if (!SGL::objectHasState($input->orgTypes)) {
+            SGL::raiseError('No data in input object', SGL_ERROR_NODATA);
+            return false;
+        }
         SGL_DB::setConnection($this->dbh);
         $orgType = DB_DataObject::factory($this->conf['table']['organisation_type']);
         $orgType->setFrom($input->orgTypes);
